# TS-testes-02-06

./: README.md  category.txt  main.py  product.txt  pyproject.toml
src/: dao.py  models.py  view.py
tests/Assert/: test_dao.py  test_model.py
