[tool.poetry]
name = "ts-teste-01-06"
version = "0.1.0"
description = ""
authors = ["Eduardo Ferreira <eduardo.ferreira@olist.com>"]

[tool.poetry.dependencies]
python = "^3.9"
pytest = "^6.2.4"
pre-commit = "^2.13.0"
safety = "^1.10.3"
flake8 = "^3.9.2"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
